# AntsLayer

./: .gitignore  AntsLayer.js  Cargo.toml  Draw.js  Keys.js  Terrain.js  Units.js  ant_layer.js  ants_layer  doc.html  index.html
biomes/: Cargo.toml
biomes/src/: lib.rs  noise.rs  params.rs  tests.rs
chunk/: Cargo.toml
chunk/src/: debug.rs  lib.rs  tests.rs  thread.rs  threads.rs
config/: Coast.toml  Hill.toml  Mountain.toml  Ocean.toml  Plain.toml  biomes_config.toml
coords/: Cargo.toml
coords/src/: aliases.rs  convert.rs  coords.rs  lib.rs  serialize.rs
game/: Cargo.toml
game/src/: game.rs  inputs.rs  lib.rs  tests.rs  thread.rs  update.rs
map/: Cargo.toml
map/chunk_manager/: Cargo.toml
map/chunk_manager/src/: chunk_manager.rs  lib.rs  tests.rs  threads.rs
map/src/: camera.rs  debug.rs  lib.rs  renderer.rs  tests.rs  thread.rs  world.rs
menu/: .gitignore  Cargo.toml
menu/src/: button.rs  lib.rs  map_editor.rs
neuron/: Cargo.toml
neuron/src/: main.rs
settings/tile/minerals/: gen_params.json
src/: ant.rs  automaton.rs  buildings.rs  camera.rs  coords.rs  debug.rs  debug_interface.rs  inputs.rs  interface.rs  main.rs  minerals.rs  renderer.rs  shaders.rs  team.rs  terrain.rs  time.rs  units.rs  window.rs
src/ant/: colony.rs  direction.rs  explorer.rs  joette.rs  manager.rs  mod.rs  queen.rs  render.rs  test.rs  worker.rs
src/chunk/: biomes.rs  generation.rs  index.rs  manager.rs  mod.rs  thread.rs  tile.rs
src/coords/: Cargo.toml
src/coords/src/: coords.rs  lib.rs
src/game/: mod.rs
src/game/interface/: main_menu.rs  mod.rs
src/game/map/: Cargo.toml  automaton.rs  map_creation.rs  mod.rs
src/game/render/: camera.rs  mod.rs  (+1 more)
src/map/: automaton.rs  buildings.rs  map_creation.rs  minerals.rs  mod.rs  terrain.rs
src/renderer/: camera.rs  chunk.rs  clouds.rs  maths.rs  mod.rs  rect.rs
src/units/: actions.rs  jobs.rs  mod.rs  pathfinding.rs
tile/: Cargo.toml
tile/src/: from.rs  lib.rs  str.rs  tests.rs
unit/: Cargo.toml
unit/src/: lib.rs  tests.rs  unit.rs
(+11 files in other folders)
