[package]
name = "ants_layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[target.'cfg(windows)'.dependencies]
sdl2 = { version = "0.34.0", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
sdl2 = "0.34.0"

rusttype = "0.9.2"
gl = "0.14.0"
gl_constants = "0.1.1"
gl_loader = "0.1.2"
noise = "0.9.0"
rand = "0.8.5"
automata = "0.0.4"
pathfinding = "4.11.0"
colored = "2.1.0"
coords = {version = "0.1.0", path = "src/coords"}