[package]
name = "ants_layer"
version = "0.1.0"
edition = "2021"

[dependencies]

# SDL
sdl2 = { version = "0.37", features = ["ttf"] }

# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
bitflags = { version = "2.4", features = ["serde"] }

# toml parsing crate
toml = "0.8.18"

# Noise generation
noise = "0.9.0"
rand = "0.8.5"
