[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # pour la sérialisation binaire
bitflags = { version = "2.4", features = ["serde"] }
toml = "0.8.18"
biomes = { path="../biomes"}
coords = { path="../coords"}
chunk = { path="../chunk"}
unit = { path="../unit"}
tile = { path="../tile"}
map = { path="../map"}
chunk_manager = { path="../map/chunk_manager"}
menu = { path="../menu"}
sdl2 = "0.37"
byteorder = "1.4"
