[package]
name = "map"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # pour la sérialisation binaire
bitflags = { version = "2.4", features = ["serde"] }
toml = "0.8.18"
biomes = { path="../biomes"}
chunk = { path="../chunk"}
tile = { path="../tile"}
coords = { path="../coords"}
chunk_manager = {path="./chunk_manager"}
sdl2 = "0.37"
byteorder = "1.4"
rand = "0.8.5"
crossterm = "0.28.1"
